update llvm pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.4)
 
 file(REMOVE_RECURSE build)
 
-add_subdirectory(Pass)
+add_subdirectory(Instrument)
+add_subdirectory(Count)
 add_subdirectory(Collect)
