--- a/Instrument/CMakeLists.txt
+++ b/Instrument/CMakeLists.txt
@@ -8,21 +8,21 @@ link_directories(${LLVM_LIBRARY_DIRS})
 list(APPEND CMAKE_MODULE_PATH "${LLVM_DIR}")
 include(AddLLVM)
 
-add_llvm_loadable_module(DCCPhoenix Instrument.cpp)
+add_llvm_loadable_module(Instrument Instrument.cpp)
 
 # Use C++11 to compile your pass (i.e., supply -std=c++11).
-target_compile_features(DCCPhoenix PRIVATE cxx_range_for cxx_auto_type)
+target_compile_features(Instrument PRIVATE cxx_range_for cxx_auto_type)
 
 # LLVM is (typically) built with no C++ RTTI. We need to match that;
 # otherwise, we'll get linker errors about missing RTTI data.
-set_target_properties(DCCPhoenix PROPERTIES
+set_target_properties(Instrument PROPERTIES
   COMPILE_FLAGS "-fno-rtti"
 )
 
 # Get proper shared-library behavior (where symbols are not necessarily
 # resolved when the shared library is linked) on OS X.
 if(APPLE)
-  set_target_properties(DCCPhoenix PROPERTIES
+  set_target_properties(Instrument PROPERTIES
     LINK_FLAGS "-undefined dynamic_lookup"
   )
 endif(APPLE)
