--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.4)
 
 file(REMOVE_RECURSE build)
 
-add_subdirectory(Instrument)
+add_subdirectory(Profile)
 add_subdirectory(Count)
 add_subdirectory(GEP)
 add_subdirectory(Collect)
