--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,5 @@ cmake_minimum_required(VERSION 3.4)
 file(REMOVE_RECURSE build)
 
 add_subdirectory(Profile)
-add_subdirectory(Count)
-add_subdirectory(GEP)
+add_subdirectory(CountArith)
 add_subdirectory(Collect)
