Improvements and a better readme.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ file(REMOVE_RECURSE build)
 add_subdirectory(Profile)
 add_subdirectory(CountArith)
 add_subdirectory(Collect)
+add_subdirectory(Identify)
