--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(Profile)
 add_subdirectory(CountArith)
 add_subdirectory(Collect)
 add_subdirectory(Identify)
+add_subdirectory(Optimize)
