loots of improvements
- Bases of a cost model
- Sparse must analysis for deciding what instructions to move to the new basic block
- Replace std::vector<T> by llvm::SmallVector<T, V>
- Fix a few bugs

--- a/Identify/CMakeLists.txt
+++ b/Identify/CMakeLists.txt
@@ -19,6 +19,8 @@ set_target_properties(Identify PROPERTIES
   COMPILE_FLAGS "-fno-rtti"
 )
 
+add_definitions(-Wfatal-errors)
+
 # Get proper shared-library behavior (where symbols are not necessarily
 # resolved when the shared library is linked) on OS X.
 if(APPLE)
