Start implement a DAG approach

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(CountArith)
 add_subdirectory(Collect)
 add_subdirectory(Identify)
 add_subdirectory(Optimize)
+add_subdirectory(DAG)
