rename dependenceAnalysis -> Program Dependence Graph

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ file(REMOVE_RECURSE build)
 add_subdirectory(CountArith)
 add_subdirectory(Collect)
 add_subdirectory(Identify)
-add_subdirectory(DependenceAnalysis)
+add_subdirectory(PDG)
 add_subdirectory(DAG)
