--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ add_subdirectory(CountArith)
 add_subdirectory(Collect)
 add_subdirectory(Identify)
 add_subdirectory(PDG)
+add_subdirectory(ProgramSlicing)
 add_subdirectory(DAG)
