--- a/ProgramSlicing/CMakeLists.txt
+++ b/ProgramSlicing/CMakeLists.txt
@@ -8,33 +8,27 @@ link_directories(${LLVM_LIBRARY_DIRS})
 list(APPEND CMAKE_MODULE_PATH "${LLVM_DIR}")
 include(AddLLVM)
 
-add_llvm_loadable_module(DAG 
-  ../Identify/Identify.cpp 
-  ../ProgramSlicing/ProgramSlicing.cpp
-  ../PDG/PDGAnalysis.cpp
-  ../PDG/PDGAnalysisWrapperPass.cpp
-  ../PDG/dependenceGraph.cpp
-  DAG.cpp
-  utils.cpp
-  node.cpp
-  insertIf.cpp
-  manual_profile.cpp
-  parser.cpp
-  )
+add_llvm_loadable_module(PS 
+  ../PDG/PDGAnalysisWrapperPass.cpp 
+  ../PDG/PDGAnalysis.cpp 
+  ../PDG/dependenceGraph.cpp 
+  ProgramSlicing.cpp)
+
+target_link_libraries(PDG)
 
 # Use C++11 to compile your pass (i.e., supply -std=c++11).
-target_compile_features(DAG PRIVATE cxx_range_for cxx_auto_type)
+target_compile_features(PS PRIVATE cxx_range_for cxx_auto_type)
 
 # LLVM is (typically) built with no C++ RTTI. We need to match that;
 # otherwise, we'll get linker errors about missing RTTI data.
-set_target_properties(DAG PROPERTIES
+set_target_properties(PS PROPERTIES
   COMPILE_FLAGS "-fno-rtti"
 )
 
 # Get proper shared-library behavior (where symbols are not necessarily
 # resolved when the shared library is linked) on OS X.
 if(APPLE)
-  set_target_properties(DAG PROPERTIES
+  set_target_properties(PS PROPERTIES
     LINK_FLAGS "-undefined dynamic_lookup"
   )
 endif(APPLE)
