--- a/PDG/CMakeLists.txt
+++ b/PDG/CMakeLists.txt
@@ -8,8 +8,9 @@ link_directories(${LLVM_LIBRARY_DIRS})
 list(APPEND CMAKE_MODULE_PATH "${LLVM_DIR}")
 include(AddLLVM)
 
-add_llvm_loadable_module(PDG PDGAnalysisWrapperPass.cpp
-  PDGAnalysis.cpp dependenceGraph.cpp)
+add_llvm_loadable_module(PDG
+  PDGAnalysis.cpp 
+  dependenceGraph.cpp)
 
 # Use C++11 to compile your pass (i.e., supply -std=c++11).
 target_compile_features(PDG PRIVATE cxx_range_for cxx_auto_type)
