add countstore pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.4)
 file(REMOVE_RECURSE build)
 
 add_subdirectory(CountArith)
+add_subdirectory(CountStores)
 add_subdirectory(Collect)
 add_subdirectory(Identify)
 add_subdirectory(PDG)
